# upload_all_images_in_markdown

./: .gitignore  README.md  config.json  pyproject.toml  upload-images.spec  upload_images.spec
.github/workflows/: build.yml
upload_all_images_in_markdown/: __init__.py  main.py
upload_all_images_in_markdown/test/: test_main.py
